--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint-plugin-prettier": "^5.5.4",
     "nodemon": "^3.1.11",
     "prettier": "^3.6.2",
+    "release-it": "^19.0.6",
+    "release-it-pnpm": "^4.6.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
