--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "auth"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "packageManager": "pnpm@10.12.4",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
